# carrus

./: .gitignore  README.md  pyproject.toml  ruff.toml  run_tests.sh  test_report_20241210_205310.txt  test_report_20241210_205721.txt  test_report_20241210_210645.txt  test_report_20241210_211407.txt  test_suite.py
.github/workflows/: ci.yml  error-notification.yml  mdm-upload-notification.yml  notification-tests.yml  slack-notifications.yml  version-tracking.yml
docs/: manifests.md
scripts/: comprehensive_fix.py  critical_fixes.py  fix_critical.py  fix_imports.py  fix_lint.py  fix_specific_issues.py  patch_files.py  quick_syntax_fix.py  sort_imports.py  syntax_fix.py
src/carrus/: __init__.py  cli.py
src/carrus/core/: builder.py  codesign.py  config.py  database.py  downloader.py  logging.py  manifests.py  notifications.py  repository.py  types.py  updater.py
test-repo/: repo.yaml
test-repo/manifests/browsers/: chrome.yaml  firefox.yaml
test-repo/manifests/utilities/: rectangle.yaml
tests/: command_runner.py  conftest.py  database-tests.py  test_builder.py  test_codesign.py  test_config.py  test_database.py  test_downloader.py  test_logging.py  test_manifests.py  test_notifications.py  test_repository.py  test_updater.py
