# pyproject.toml
[project]
name = "carrus"
version = "0.1.0"
description = "Modern macOS package manager with MDM integration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "packaging>=23.0",
]

[project.scripts]
carrus = "carrus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carrus"]
